Fixed up word wrapping on content pages

--- a/sites/all/themes/greenrenters/css/theme/theme.css
+++ b/sites/all/themes/greenrenters/css/theme/theme.css
@@ -1374,6 +1374,7 @@ margin-top: 210px;
 min-width: 485px;
 /*width:45%;*/
 	    margin-top: 0px;
+	    word-wrap:break-word;
 
 }
 
@@ -1396,6 +1397,11 @@ min-width: 485px;
 .pane-print-0
 {
 clear:both;
+}
+
+.pane-content
+{
+	width:485px;
 }
 
 /* Flags */
